# DGAsalaris

./: README.md  pyproject.toml  streamlit_app.py
src/dgasalaris/: __init__.py
